# trove

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
scripts/: build.bat
src/: cmd.cpp  cmd.h  main.cpp
